projects/vb6parse/snapshots/parsers/cst/declarations/mod_declarations/event_multiple_parameters.snap
---
source: projects/vb6parse/tests/declarations/mod_declarations.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: EventStatement
      children:
        - kind: EventKeyword
          text: Event
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ValueChanged
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: ByValKeyword
              text: ByVal
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: OldValue
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: LongKeyword
              text: Long
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: ByValKeyword
              text: ByVal
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: NewValue
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: LongKeyword
              text: Long
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
