projects/vb6parse/snapshots/parsers/cst/declarations/mod_declarations/event_simple.snap
---
source: projects/vb6parse/tests/declarations/mod_declarations.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: EventStatement
      children:
        - kind: EventKeyword
          text: Event
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: StatusChanged
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
